<resources>
    <string name="app_name">Rolll Scanner</string>

    <string name="general_text_back">Back</string>
    <string name="general_placeholder_selected">%s items selected</string>
    <string name="general_text_next">Next</string>
    <string name="general_placeholder_page">Page %1$s/%2$s</string>
    <string name="general_text_crop">Crop</string>
    <string name="general_text_done">Done</string>
    <string name="general_text_save">Save</string>
    <string name="general_placeholder_number">Number %s</string>
    <string name="general_text_duplicate">Duplicate</string>
    <string name="general_text_delete">Delete</string>
    <string name="general_error_selected">You haven\'t select any document yet.</string>
    <string name="general_hint_search">Enter your keyword…</string>
    <string name="general_text_yes">Yes</string>
    <string name="general_text_no">No</string>
    <string name="general_text_edit">Edit</string>
    <string name="general_error_maxduplicate">You have reached maximun duplicate document 10 times</string>
    <string name="splashscreen_text_desc">Easily Scan Your Document</string>

    <string name="main_title_empty">Empty Document</string>
    <string name="main_text_empty">You haven’t add any document to scan yet. Please add using
        <b>(+)</b> button on bottom right corner.
    </string>
    <string name="main_text_actionhint">Long press to duplicate or delete documents.</string>

    <string name="pro_text_message">Pay once, enjoy the application without ads and other excellent
        features.
    </string>

    <string name="camera_title_page">Camera</string>

    <string name="imageprocessing_title_page">Image Processing</string>
    <string name="imageprocessing_text_filter">Filter</string>

    <string name="imagecropping_title_page">Image Cropping</string>

    <string name="photofilter_title_page">Photo Filter</string>
    <string name="photofilter_action_original">Original</string>
    <string name="photofilter_action_magic">Magic Color</string>
    <string name="photofilter_action_bw">B&amp;W Color</string>
    <string name="photofilter_action_grayscale">Grayscale</string>

    <string name="dialog_title_delete">Delete Documents</string>
    <string name="dialog_text_deleteconfirmation">Are you sure want to delete selected documents ?</string>

    <string name="dialog_hint_edit">Enter your title…</string>
    <string name="dialog_error_edit">Title can\'t be empty</string>

    <string name="pro_title_page">Upgrade</string>
    <string name="pro_text_desc">Get various advantages with <b>pro</b> upgrades</string>
    <string name="pro_text_no_ads">No Ads</string>
    <string name="pro_text_unlimitiedpdf">Unlimited PDF Converter</string>
    <string name="pro_text_unlimitiedduplicate">Unlimited Documents Duplication</string>
    <string name="pro_text_freeupgrade">Lifetime Free Feature Update</string>

    <string name="about_title_page">About</string>
    <string name="aboutus_text_description"><b>Rolll Scanner - Document Scanner</b> is lightweight document scanner to help you to easy scan and organize your documents.</string>
    <string name="aboutus_text_copyright">We thank you for using several vectors from the following accounts:</string>

    <string name="pdf_text_folder">RolllScanner PDF</string>
    <string name="pdf_error_folder">Folder is not created</string>
    <string name="pdf_loading_pdf">Generating PDF</string>
    <string name="pdf_text_saved">PDF generated in %s</string>
    <string name="pdf_error_generate">Failed to generated PDF. Please try again later!</string>

    <string name="error_failed_bitmap">Failed to retrieve image!</string>
</resources>