<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/general_bg_dialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp">

        <ImageView
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_90sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/general_shape_circle_gray"
            android:padding="@dimen/_20sdp"
            android:src="@drawable/dialog_ic_delete" />

        <id.co.rolllpdf.uikit.UiKitTextview
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:gravity="center"
            android:text="@string/dialog_title_delete"
            app:rolll_text_code="h5_B" />

        <id.co.rolllpdf.uikit.UiKitTextview
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/dialog_text_deleteconfirmation"
            app:rolll_text_code="p_a_r" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/dialogdelete_button_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/general_button_strokered"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/general_text_no"
                android:textAllCaps="false"
                android:textColor="@color/app_error_color"
                android:textSize="@dimen/_11ssp" />

            <View
                android:layout_width="@dimen/_10sdp"
                android:layout_height="@dimen/_20sdp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/dialogdelete_button_yes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/general_button_red"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/general_text_yes"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_11ssp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>