<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/general_bg_dialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:animateLayoutChanges="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp">

        <EditText
            android:id="@+id/dialogedit_edittext_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/general_bg_search"
            android:hint="@string/dialog_hint_edit"
            android:maxLines="1"
            android:padding="@dimen/_10sdp"
            android:singleLine="true"
            android:textColor="@color/dark_textview"
            android:textColorHint="@color/app_hint_color"
            android:textSize="@dimen/_11ssp" />

        <id.co.rolllpdf.uikit.UiKitTextview
            android:id="@+id/dialogedit_textview_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:text="@string/dialog_error_edit"
            android:visibility="gone"
            app:rolll_text_code="h7_R"
            app:rolll_text_color="error" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialogedit_button_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/general_button_primary"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/general_text_edit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_11ssp" />
    </LinearLayout>
</RelativeLayout>