<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/app_text_dark">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/photofilter_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/photofilter_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            app:contentInsetStartWithNavigation="0dp"
            app:navigationIcon="@drawable/general_ic_chevron_left"
            app:title="@string/photofilter_title_page"
            app:titleTextAppearance="@style/ToolbarTextAppearance" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/photofilter_imageview_item"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/photofilter_linear_container"
        app:layout_constraintTop_toBottomOf="@id/photofilter_appbar" />


    <LinearLayout
        android:id="@+id/photofilter_linear_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"

        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/photofiler_linear_original"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="@dimen/_10sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/photofilter_ic_original" />

            <id.co.rolllpdf.uikit.UiKitTextview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/photofilter_action_original"
                app:rolll_text_code="h7_R" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/photofiler_linear_magic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="@dimen/_10sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/photofilter_ic_magic" />

            <id.co.rolllpdf.uikit.UiKitTextview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/photofilter_action_magic"
                app:rolll_text_code="h7_R" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/photofiler_linear_bw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="@dimen/_10sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/photofilter_ic_bw" />

            <id.co.rolllpdf.uikit.UiKitTextview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/photofilter_action_bw"
                app:rolll_text_code="h7_R" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/photofiler_linear_grayscale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="@dimen/_10sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/photofilter_ic_original" />

            <id.co.rolllpdf.uikit.UiKitTextview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/photofilter_action_grayscale"
                app:rolll_text_code="h7_R" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>