<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/pro_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            app:navigationIcon="@drawable/general_ic_chevron_left"
            app:title="@string/pro_title_page"
            app:titleTextAppearance="@style/ToolbarTextAppearance" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/pro_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_20sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardElevation="@dimen/_3sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <id.co.rolllpdf.uikit.UiKitTextview
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_13sdp"
                        android:text="@string/pro_text_desc"
                        app:rolll_text_code="h6_M"
                        app:rolll_text_color="dark" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_marginTop="@dimen/_13sdp"
                        android:background="@color/app_line_color" />


                    <id.co.rolllpdf.uikit.UiKitTextview
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:drawablePadding="@dimen/_10sdp"
                        android:focusable="true"
                        android:paddingHorizontal="@dimen/_10sdp"
                        android:paddingVertical="@dimen/_9sdp"
                        android:text="@string/pro_text_no_ads"
                        app:drawableStartCompat="@drawable/general_ic_noads"
                        app:rolll_text_code="p_a_r"
                        app:rolll_text_color="dark" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:background="@color/app_line_color" />

                    <id.co.rolllpdf.uikit.UiKitTextview
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:drawablePadding="@dimen/_10sdp"
                        android:focusable="true"
                        android:paddingHorizontal="@dimen/_10sdp"
                        android:paddingVertical="@dimen/_9sdp"
                        android:text="@string/pro_text_unlimitiedpdf"
                        app:drawableStartCompat="@drawable/general_ic_pdf"
                        app:rolll_text_code="p_a_r"
                        app:rolll_text_color="dark" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:background="@color/app_line_color" />

                    <id.co.rolllpdf.uikit.UiKitTextview
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:drawablePadding="@dimen/_10sdp"
                        android:focusable="true"
                        android:paddingHorizontal="@dimen/_10sdp"
                        android:paddingVertical="@dimen/_9sdp"
                        android:text="@string/pro_text_unlimitiedduplicate"
                        app:drawableStartCompat="@drawable/general_ic_unlimited"
                        app:rolll_text_code="p_a_r"
                        app:rolll_text_color="dark" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:background="@color/app_line_color" />

                    <id.co.rolllpdf.uikit.UiKitTextview
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:drawablePadding="@dimen/_10sdp"
                        android:focusable="true"
                        android:paddingHorizontal="@dimen/_10sdp"
                        android:paddingVertical="@dimen/_9sdp"
                        android:text="@string/pro_text_freeupgrade"
                        app:drawableStartCompat="@drawable/general_ic_free"
                        app:rolll_text_code="p_a_r"
                        app:rolll_text_color="dark" />


                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/pro_button_upgrade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginVertical="@dimen/_20sdp"
                android:background="@drawable/general_button_primary"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/pro_title_page"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_11sdp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>