<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/aboutus_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            app:navigationIcon="@drawable/general_ic_chevron_left"
            app:title="@string/about_title_page"
            app:titleTextAppearance="@style/ToolbarTextAppearance" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/aboutus_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_20sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardElevation="@dimen/_3sdp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_16sdp">

                    <id.co.rolllpdf.uikit.UiKitTextview
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/aboutus_text_description"
                        app:rolll_text_code="p_a_r" />
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>

            <id.co.rolllpdf.presentation.customview.DialogProFeatureView
                android:id="@+id/aboutus_proview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_20sdp" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginVertical="@dimen/_20sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardElevation="@dimen/_3sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <id.co.rolllpdf.uikit.UiKitTextview
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_13sdp"
                        android:text="@string/aboutus_text_copyright"
                        app:rolll_text_code="p_a_r"
                        app:rolll_text_color="dark" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_marginTop="@dimen/_13sdp"
                        android:background="@color/app_line_color" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/aboutus_recyclerview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_20sdp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>